--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 </head>
 <body>
     <header>Mr Lynch RNG</header>
-    <button>Roll</button>
-    <input type="button" value="reset all" id="reset">
+    <button id="roll">Roll</button><br>
+    <button id="reset">Reset Progress</button>
     <div id="gray-box"></div>
     <p id="display">normal mr lynch</p>
     <p id="chance">1/2</p>
+    <img id="roll-image" src="images/normal.jpg">
     <div id="inventory">
     </div>
-    <p>SAVING CURRENTLY DISABLED</p>
+    <button id="toggle">Close</button>
+    <div id="update-log">
+        <b>Update 1</b>
+        <p>&dot; New Mr Lynches</p>
+        <p>&dot; Automatically Saves</p>
+        <p>&dot; Resized Inventory</p>
+        <p>&dot; Items are sorted automatically</p>
+        <p>&dot; Delete Button</p>
+        <p>&dot; Toggle inventory</p>
+    </div>
 </body>
 </html>
