--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    <header>Mr Lynch RNG</header>
-    <button id="roll">Roll</button><br>
-    <button id="reset">Reset Progress</button>
-    <div id="gray-box"></div>
-    <p id="display">normal mr lynch</p>
-    <p id="chance">1/2</p>
-    <img id="roll-image" src="images/normal.jpg">
-    <div id="inventory">
+    <div id="game">
+        <header>Mr Lynch RNG</header>
+        <button id="roll">Roll</button><br>
+        <button id="reset">Reset Progress</button>
+        <div id="gray-box"></div>
+        <p id="display">normal mr lynch</p>
+        <p id="chance">1/2</p>
+        <img id="roll-image" src="images/normal.jpg">
+        <div id="inventory">
+        </div>
+        <button id="toggle">Close</button>
     </div>
-    <button id="toggle">Close</button>
+    <p id="total">Total: 0</p>
+    <p id="unlocked">Rarities Unlocked: 0/0</p>
+    <div id="rarest">
+        <p id="rarest-name">Rarest Mr Lynch:</p>
+        <img id="rarest-img" src="">
+    </div>
     <div id="update-log">
+        <b>Update 2</b>
+        <p>&dot; Fixed some mr lynches forcing a reset</p>
+        <p>&dot; 20+ New Mr Lynches</p>
+        <p>&dot; Added some stats</p>
+        <p>&dot; Rarest Mr Lynch to flex on your friends</p>
         <b>Update 1</b>
         <p>&dot; New Mr Lynches</p>
         <p>&dot; Automatically Saves</p>
