--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr Lynch RNG</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/mythic.jpg">
     <script defer src="main.js"></script>
 </head>
 <body>
