--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="inventory">
         </div>
         <button id="toggle">Close</button>
+        <p>im not adding crafting stop asking</p>
     </div>
     <p id="total">Total: 0</p>
     <p id="unlocked">Rarities Unlocked: 0/0</p>
