start on pressing auto roll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div id="game">
         <header>Mr Lynch RNG</header>
-        <button id="roll">Roll</button><br>
+        <button id="roll">Roll</button>
+        <button id="auto">Auto Roll</button><br>
         <button id="reset">Reset Progress</button>
         <div id="gray-box"></div>
         <p id="display">normal mr lynch</p>
@@ -20,7 +21,7 @@
         <div id="inventory">
         </div>
         <button id="toggle">Close</button>
-        <p>im not adding crafting stop asking</p>
+        <p>Whats That? Whats a crafting?</p>
     </div>
     <p id="total">Total: 0</p>
     <p id="unlocked">Rarities Unlocked: 0/0</p>
@@ -29,6 +30,8 @@
         <img id="rarest-img" src="">
     </div>
     <div id="update-log">
+        <b>Update 3</b>
+        <p>&dot;Unlocking a 1/1000+ mr lynch unlocks the Auto Roll Button</p>
         <b>Update 2</b>
         <p>&dot; Fixed some mr lynches forcing a reset</p>
         <p>&dot; 20+ New Mr Lynches</p>
