--- a/index.html
+++ b/index.html
@@ -9,29 +9,39 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    <div id="game">
-        <header>Mr Lynch RNG</header>
-        <button id="roll">Roll</button>
-        <button id="auto">Auto Roll</button><br>
-        <button id="reset">Reset Progress</button>
-        <div id="gray-box"></div>
-        <p id="display">normal mr lynch</p>
-        <p id="chance">1/2</p>
-        <img id="roll-image" src="images/normal.jpg">
-        <div id="inventory">
-        </div>
-        <button id="toggle">Close</button>
-        <p>Whats That? Whats a crafting?</p>
+    <header>Mr Lynch RNG</header>
+    <button id="roll">Roll</button>
+    <button id="auto">Auto Roll</button><br>
+    <button id="reset">Reset Progress</button>
+    <div id="gray-box"></div>
+    <p id="display">normal mr lynch</p>
+    <p id="chance">1/2</p>
+    <img id="roll-image" src="images/common.jpg">
+    <div id="inventory">
     </div>
+    <button id="toggle">Close</button>
+    <p>Whats That? Whats a crafting?</p>
     <p id="total">Total: 0</p>
     <p id="unlocked">Rarities Unlocked: 0/0</p>
     <div id="rarest">
         <p id="rarest-name">Rarest Mr Lynch:</p>
         <img id="rarest-img" src="">
     </div>
+    <div id="menu">
+        <p id="icon">&equiv;</p>
+        <div id="links">
+            <a href="https://forms.gle/2rMuf9opU2SfEgFR7">Submit Mr Lynch</a>
+            <a href="#" id="openModal">Test Please Ignore</a>
+        </div>
+    </div>
+    <div id="modal1">
+        <div id="close1">X</div>
+        <p>Test Modal Please Ignore</p>
+    </div>
     <div id="update-log">
         <b>Update 3</b>
         <p>&dot;Unlocking a 1/1000+ mr lynch unlocks the Auto Roll Button</p>
+        <small>*turns off when you leave the tab</small>
         <b>Update 2</b>
         <p>&dot; Fixed some mr lynches forcing a reset</p>
         <p>&dot; 20+ New Mr Lynches</p>
