--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <p>Test Modal Please Ignore</p>
     </div>
     <div id="update-log">
+        <p>Minor Update:</p><p>Added Links in top right</p>
         <b>Update 3</b>
         <p>&dot;Unlocking a 1/1000+ mr lynch unlocks the Auto Roll Button</p>
         <small>*turns off when you leave the tab</small>
