--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
     <button id="auto">Auto Roll</button><br>
     <button id="reset">Reset Progress</button>
     <div id="gray-box"></div>
+    <div id="black-bg"></div>
     <p id="display">normal mr lynch</p>
     <p id="chance">1/2</p>
     <img id="roll-image" src="images/common.jpg">
     <div id="inventory">
     </div>
     <button id="toggle">Close</button>
-    <p>Whats That? Whats a crafting?</p>
-    <p id="total">Total: 0</p>
-    <p id="unlocked">Rarities Unlocked: 0/0</p>
+    <p>Active Boosts:</p>
+    <p id="speed">Speed: x1</p>
+    <p id="luck">Luck: x1</p>
+    <div id="stats">
+        <p id="time">Time Played: 00:00:00</p>
+        <p id="total">Total: 0</p>
+        <p id="unlocked">Rarities Unlocked: 0/0</p>
+    </div>
     <div id="rarest">
         <p id="rarest-name">Rarest Mr Lynch:</p>
         <img id="rarest-img" src="">
@@ -31,18 +37,27 @@
         <p id="icon">&equiv;</p>
         <div id="links">
             <a href="https://forms.gle/2rMuf9opU2SfEgFR7">Submit Mr Lynch</a>
-            <a href="#" id="openModal">Test Please Ignore</a>
+            <a href="#" id="openModal1">Crafting</a>
         </div>
     </div>
     <div id="modal1">
         <div id="close1">X</div>
-        <p>Test Modal Please Ignore</p>
+        <p>A</p>
     </div>
+    <video id="video">
+        <source id="source" src="" type="video/mp4">
+    </video>
     <div id="update-log">
+        <b>Update 4</b>
+        <p>&dot;Crafting</p>
+        <p>&dot;Boosts</p>
+        <p>&dot;50+ New Mr Lynches</p>
+        <p>&dot;Cutscenes</p>
+        <p>&dot;Added a total time played (as of the update)</p>
+        <p>&dot;Performance Optimizations</p>
         <p>Minor Update:</p><p>Added Links in top right</p>
         <b>Update 3</b>
         <p>&dot;Unlocking a 1/1000+ mr lynch unlocks the Auto Roll Button</p>
-        <small>*turns off when you leave the tab</small>
         <b>Update 2</b>
         <p>&dot; Fixed some mr lynches forcing a reset</p>
         <p>&dot; 20+ New Mr Lynches</p>
