--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div id="links">
             <a href="https://forms.gle/2rMuf9opU2SfEgFR7">Submit Mr Lynch</a>
             <a href="#" id="openModal1">Crafting</a>
+            <a href="#" id="openInv">Full Inventory</a>
         </div>
     </div>
     <div id="modal1">
