wrap in IIFE and isolate onclick to eventlisteners

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <source id="source" src="" type="video/mp4">
     </video>
     <div id="update-log">
+        <b>Bug Fix</b>
+        <p>&dot; removed bug to get infinite rolls</p>
+        <p>&dot; removed variables and functions from global scope</p>
         <b>Update 4</b>
         <p>&dot;Crafting</p>
         <p>&dot;Boosts</p>
