--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/images/mythic.jpg">
     <script defer src="main.js"></script>
+    <script defer src="single-tab.js"></script>
 </head>
 <body>
     <header>Mr Lynch RNG</header>
