user ids just in case

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <p id="luck">Luck: x1</p>
     <p>&#9786;</p>
     <div id="stats">
+        <p id="user-id">Id: 0000000000</p>
         <p id="time">Time Played: 00:00:00</p>
         <p id="total">Total: 0</p>
         <p id="unlocked">Rarities Unlocked: 0/0</p>
