--- a/status.html
+++ b/status.html
@@ -1,4 +1,4 @@
 <h1>Mr Lynch RNG is:</h1>
 <h1>&#128994; ONLINE</h1>
 <h3>Outage History:</h3>
-<p>None</p>
+<p>Mar 19: Down for <b>4</b> minutes during Update 4 development.</p>
