--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <header>Mr Lynch RNG</header>
     <button id="roll">Roll</button>
     <button id="auto">Auto Roll</button><br>
-    <button id="reset">Reset Progress</button>
     <div id="gray-box"></div>
     <div id="black-bg"></div>
     <p id="display">normal mr lynch</p>
@@ -42,11 +41,17 @@
             <a href="https://forms.gle/2rMuf9opU2SfEgFR7">Submit Mr Lynch</a>
             <a href="#" id="openModal1">Crafting</a>
             <a href="#" id="openInv">Full Inventory</a>
+            <a href="#" id="reset">Reset Progress</button>
         </div>
     </div>
     <div id="modal1">
         <div id="close1">X</div>
         <p>A</p>
+    </div>
+    <div id="closing">
+        <h1>Please dont leave twin</h1>
+        <img src="images/leaving.jpg" height="50%"><br>
+        <small style="font-size:10px">The Mr Lynch&trade; depicted above is unobtainable in Mr Lynch RNG&trade;</small>
     </div>
     <video id="video">
         <source id="source" src="" type="video/mp4">
