--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:title" content="Mr Lynch RNG" />
+    <meta property="og:description" content="Play the newest hit gane Mr Lynch RNG! Roll for types of Mr Lynchs, and get rare Mr Lynchs" />
+    <meta property="og:image" content="https://mrlynch-rng.vercel.app/images/mythic.jpg" />
     <title>Mr Lynch RNG</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/images/mythic.jpg">
